# TRACE-RAG

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff.template  CLAUDE.md  CONTRIBUTING.md  QueryPrompt.py  README.md  THIRD_PARTY_NOTICES.md  ablation_tables_popqa_musique.md  agentic_main.py  analyze_newg_architecture.py  analyze_newg_logs.py  build_graph.py  case_report.md  collect_experiment_results.py  collect_leave_one_out_ablation.py  eval_first_n.py  experiment.yml  experiment_results_organized.md  generate_case_report.py  generate_newg_leave_one_out_configs.py  handoff_log_2026-05-13.md  leave_one_out_ablation_commands.md  ll_env.yml  main.py  newg_main.py  normalize_tog_outputs.py  paper_cn_draft_rewrite.md  paper_cn_full.tex  paper_cn_latex_skeleton.tex  paper_results_latex.tex  paper_results_narrative.md  plot_leave_one_out_ablation.py  plot_musique_by_model_baseline_vs_newg.py  plot_musique_model_comparison.py  plot_popqa_ablation.py  plot_popqa_by_model_baseline_vs_newg.py  plot_popqa_model_comparison.py  plot_positive_showcase_figures.py  (+27 more)
release/: .gitignore  SECURITY.md  arc_fuse_main.py  pyproject.toml  run_demo.py
release/configs/: arc_fuse.example.json
release/docs/: DATASETS.md  INTEGRATION.md  REPRODUCTION.md  SOURCE_MAP.md
release/examples/: graph.jsonl
release/research_backend/: check_compatibility.py  compatibility_manifest.json  requirements.txt
release/research_backend/arc_fuse_digimon/: disambiguation.py  engine.py  fusion.py  (+2 more)
release/results/: VALIDATION.md  legacy_newg_results_summary.tsv
release/scripts/: scan_secrets.py
(+115 files in other folders)
