[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-fuse"
version = "0.1.0"
description = "Adaptive Routing and Critic-guided Evidence Fusion for graph-text RAG"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = []

[project.scripts]
arc-fuse-demo = "arc_fuse.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
